[tool.poetry]
name = "mednotes"
version = "0.1.0"
description = "Notes I'm taking"
authors = ["BGASM <slatte26@msu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "^3.3.3"

[tool.poetry.dev-dependencies]
Jinja2 = "^2.11.2"
Markdown = "^3.3.3"
mdx_smartypants = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
